@@ -1,0 +1,9 @@
+package test.reports.issue2611;
+
+import org.testng.annotations.Test;
+
+public class TestClassWithJustTestMethodsSample {
+
+  @Test(groups = {"dragon-warrior"})
+  public void test2Method() {}
+}
